JWT exp and Delete Category
