# laravel.pv122.com/routes/api.php
@@ -35,3 +35,5 @@ Route::get("/category", [CategoryController::class, 'index']);
 
 //додавання нової категорії
 Route::post("/category", [CategoryController::class, 'store']);
+
+Route::delete('/category/{id}',  [CategoryController:: class, 'delete']);
