# laravel.pv122.com/storage/api-docs/api-docs.json
@@ -82,6 +82,42 @@
                 ]
             }
         },
+        "/api/category/{id}": {
+            "delete": {
+                "tags": [
+                    "Category"
+                ],
+                "operationId": "eea5bb36d8f7ccb59f1240fd9d999e79",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Ідентифікатор категорії",
+                        "required": true,
+                        "schema": {
+                            "type": "number",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Успішне видалення категорії"
+                    },
+                    "404": {
+                        "description": "Категорії не знайдено"
+                    },
+                    "401": {
+                        "description": "Не авторизований"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/auth/login": {
             "post": {
                 "tags": [
